--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial - Spark in R\n",
-    "This notebook is designed to introduce some basic concepts and help get you familiar with using Spark in R. If you want to learn more, see the resources at the bottom of this notebook.  \n",
+    "# Exercise - Density-based Spatial Clustering of Applications with Noise (DBSCAN) in R\n",
+    "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise.  \n",
     "\n",
-    "In this notebook, we will load and explore the cars data that is pre-installed\n",
-    "in R. Specifically, this tutorial covers:\n",
+    "In this notebook, we will load and explore in R, the seeds dataset which contains measurements of geometrical properties of kernels belonging to three different varieties of wheat",
+    "Specifically, this exercise covers:\n",
     "\n",
     "1. Loading data in memory\n",
     "1. Creating SQLContext\n",
