--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -7,15 +7,15 @@
     "# Exercise - Density-based Spatial Clustering of Applications with Noise (DBSCAN) in R\n",
     "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise.  \n",
     "\n",
-    "In this notebook, we will load and explore in R, the seeds dataset which contains measurements of geometrical properties of kernels belonging to three different varieties of wheat",
+    "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat",
     "Specifically, this exercise covers:\n",
     "\n",
-    "1. Loading data in memory\n",
-    "1. Creating SQLContext\n",
-    "1. Creating Spark DataFrame\n",
-    "1. Group data by columns \n",
-    "1. Operating on columns\n",
-    "1. Running SQL Queries from a Spark DataFrame\n"
+    "1. Loading the DBSCAN library and the data in R\n",
+    "2. Creating a subset from the datatset\n",
+    "3. Using the dbscan function to obtain clusters\n",
+    "4. Convert the clusters to factors \n",
+    "5. Linking the clusters to the measurements\n",
+    "6. Visualizing the results\n"
    ]
   },
   {
