--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -7,10 +7,10 @@
     "# Exercise - Density-based Spatial Clustering of Applications with Noise (DBSCAN) in R\n",
     "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise.  \n",
     "\n",
-    "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat",
+    "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat. ",
     "Specifically, this exercise covers:\n",
     "\n",
-    "1. Loading the DBSCAN library and the data in R\n",
+    "1. Installing and loading the DBSCAN library and the data in R\n",
     "2. Creating a subset from the datatset\n",
     "3. Using the dbscan function to obtain clusters\n",
     "4. Convert the clusters to factors \n",
@@ -22,8 +22,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading in a DataFrame\n",
-    "To create a Spark DataFrame we load a local R DataFrame. We use a built-in DataFrame in R for our tutorials. Here is a built-in DataFrame in R, called `mtcars`. This DataFrame includes 32 observations on 11 variables.\n",
+    "## Installing and loading the DBSCAN library and the data in R\n",
+    "We begin by installing the dbscan package and loading it along with the dataset .\n",
     "\n",
     "[, 1]\tmpg\tMiles/(US) --> gallon  \n",
     "[, 2]\tcyl\t--> Number of cylinders  \n",
