--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -14,7 +14,7 @@
     "2. Creating a subset from the datatset\n",
     "3. Using the dbscan function to obtain clusters\n",
     "4. Convert the clusters to factors \n",
-    "5. Linking the clusters to the measurements\n",
+    "5. Attaching the clusters to the measurements\n",
     "6. Visualizing the results\n"
    ]
   },
