--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -25,17 +25,6 @@
     "## Installing and loading the DBSCAN library and the data in R\n",
     "We begin by installing the dbscan package and loading it along with the dataset .\n",
     "\n",
-    "[, 1]\tmpg\tMiles/(US) --> gallon  \n",
-    "[, 2]\tcyl\t--> Number of cylinders  \n",
-    "[, 3]\tdisp\t--> Displacement (cu.in.)  \n",
-    "[, 4]\thp -->\tGross horsepower  \n",
-    "[, 5]\tdrat -->\tRear axle ratio  \n",
-    "[, 6]\twt -->\tWeight (lb/1000)  \n",
-    "[, 7]\tqsec -->\t1/4 mile time  \n",
-    "[, 8]\tvs -->\tV/S  \n",
-    "[, 9]\tam -->\tTransmission (0 = automatic, 1 = manual)  \n",
-    "[,10]\tgear -->\tNumber of forward gears  \n",
-    "[,11]\tcarb -->\tNumber of carburetors  "
    ]
   },
   {
@@ -53,8 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize SQLContext\n",
-    "To work with dataframes we need a SQLContext which is created using `sparkRSQL.init(sc)`. SQLContext uses SparkContext which has been already created, named `sc`. "
+    "## Using the dbscan function to obtain clusters\n",
    ]
   },
   {
@@ -72,8 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating Spark DataFrames\n",
-    "With SQLContext and a loaded local DataFrame, we create a Spark DataFrame:"
+    "## Attaching the clusters to the measurements\n",
    ]
   },
   {
@@ -92,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Displays the content of the DataFrame \n"
+    "## Visualizing the results\n"
    ]
   },
   {
