--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the dbscan function to obtain clusters\n",
+    "## Using the dbscan function to obtain clusters\n"
    ]
   },
   {
@@ -53,7 +53,6 @@
    },
    "outputs": [],
    "source": [
-    "sqlContext <- sparkRSQL.init(sc)"
    ]
   },
   {
@@ -71,8 +70,6 @@
    },
    "outputs": [],
    "source": [
-    "sdf <- createDataFrame(sqlContext, mtcars) \n",
-    "printSchema(sdf)"
    ]
   },
   {
@@ -91,7 +88,6 @@
    },
    "outputs": [],
    "source": [
-    "SparkR::head(sdf)"
    ]
   },
   {
@@ -110,7 +106,6 @@
    },
    "outputs": [],
    "source": [
-    "SparkR::head(select(sdf, sdf$mpg ))"
    ]
   },
   {
