--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "## Installing and loading the DBSCAN library and the data in R\n",
     "We begin by installing the dbscan package and loading it along with the dataset .\n",
-    "\n",
+    "\n"
    ]
   },
   {
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "head(mtcars)"
+    "head(seeds)"
    ]
   },
   {
@@ -53,13 +53,14 @@
    },
    "outputs": [],
    "source": [
+    ""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Attaching the clusters to the measurements\n",
+    "## Attaching the clusters to the measurements\n"
    ]
   },
   {
@@ -70,6 +71,7 @@
    },
    "outputs": [],
    "source": [
+    ""
    ]
   },
   {
