--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -35,11 +35,11 @@
    },
    "outputs": [],
    "source": [
-    "#installing the library 'dbscan'\n",
+    "# installing the library 'dbscan'\n",
     "install.packages(\"dbscan\", dependencies = TRUE)\n",
     "library('dbscan')\n",
-    "#Downloading the file in the Data Scientist Workbench\n",
-    "download.file(\"https://ibm.box.com/shared/static/th5dsj5txtw052dt2k9i5hekkjhydda2.csv\",\"/resources/seeds.csv\")",
+    "# Downloading the file in the Data Scientist Workbench\n",
+    "download.file(\"https://ibm.box.com/shared/static/th5dsj5txtw052dt2k9i5hekkjhydda2.csv\",\"/resources/seeds.csv\")\n",
     "head(seeds)"
    ]
   },
