--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -39,7 +39,7 @@
     "install.packages(\"dbscan\", dependencies = TRUE)\n",
     "library('dbscan')\n",
     "# Downloading the file in the Data Scientist Workbench\n",
-    "download.file(\"https://ibm.box.com/shared/static/th5dsj5txtw052dt2k9i5hekkjhydda2.csv\",\"/resources/seeds.csv\")\n",
+    "download.file(\"https://ibm.box.com/shared\",\"/resources/seeds.csv\")\n",
     "head(seeds)"
    ]
   },
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using the dbscan function to obtain clusters\n"
+    "## Creating a subset from the dataset\n"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Attaching the clusters to the measurements\n"
+    "## Using the dbscan function to obtain clusters\n"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing the results\n"
+    "## Attaching the clusters to the measurements\n"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selecting columns"
+    "## Visualizing the results\n"
    ]
   },
   {
