--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -114,4 +114,46 @@
    "outputs": [],
    "source": [
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References:\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/DBSCAN <br>\n",
+    "https://cran.r-project.org/web/packages/dbscan/dbscan.pdf <br>\n",
+    "https://www.aaai.org/Papers/KDD/1996/KDD96-037.pdf <br>\n",
+    "http://www.cse.buffalo.edu/~jing/cse601/fa12/materials/clustering_density.pdf <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr>\n",
+    "Copyright &copy; 2016 [Big Data University](https://bigdatauniversity.com/?utm_source=bducopyrightlink&utm_medium=dswb&utm_campaign=bdu). This notebook and its source code are released under the terms of the [MIT License](https://bigdatauniversity.com/mit-license/)."
+   ]
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
