--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -58,7 +58,9 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "# Creating the subset: It contains width of the kernel and length of the kernel\n",
+    "seeds.sub <- subset(seeds, select = c(width,length))\n",
+    "head(seeds.sub)\n"
    ]
   },
   {
