--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -58,7 +58,7 @@
    },
    "outputs": [],
    "source": [
-    "# Creating the subset: It contains width of the kernel and length of the kernel\n",
+    "# Creating the subset: It contains the kernel width and the kernel length\n",
     "seeds.sub <- subset(seeds, select = c(width,length))\n",
     "head(seeds.sub)\n"
    ]
