--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "# installing the library 'dbscan'\n",
+    "# Installing the library 'dbscan'\n",
     "install.packages(\"dbscan\", dependencies = TRUE)\n",
     "library('dbscan')\n",
     "# Downloading the file in the Data Scientist Workbench\n",
@@ -78,7 +78,9 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "# Use the dbscan function to obtain clusters and store them in clusters_assignments1\n",
+    "clusters_assignments1 <- dbscan(seeds.sub, eps = .08, minPts = 4)\n",
+    "clusters_assignments1\n"
    ]
   },
   {
@@ -97,6 +99,8 @@
    },
    "outputs": [],
    "source": [
+    "# Clusters must be converted to factor before plotting in different colors\n",
+    "clusters_assignments1$cluster <- as.factor(clusters_assignments1$cluster)\n"
    ]
   },
   {
@@ -115,6 +119,9 @@
    },
    "outputs": [],
    "source": [
+    "# Visualize results (noise is shown in black) using a simple plot\n"
+    "plot(seeds.sub$width, seeds.sub$length,col = clusters_assignments1$cluster, pch = 16, main = "Scatterplot Displaying Clusters", xlab = "Kernel Width", ylab = "Kernel Length")\n"
+    "legend(x = 2.6, y = 6.75, legend = levels(clusters_assignments1$cluster), col = c(1:5), pch = 16, title = "Clusters")\n"
    ]
   },
   {
