--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "# Visualize results (noise is shown in black) using a simple plot\n"
    ]
   },
   {
