--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -119,7 +119,8 @@
    },
    "outputs": [],
    "source": [
-    "# Visualize results (noise is shown in black) using a simple plot\n"
+    "# Visualize results (noise is shown in black) using a simple plot\n",
+    "plot(seeds.sub$width, seeds.sub$length, col = clusters_assignments1$cluster, pch = 16, main = 'Scatterplot Displaying Clusters', xlab = 'Kernel Width', ylab = 'Kernel Length')\n",
    ]
   },
   {
