--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -120,8 +120,8 @@
    "outputs": [],
    "source": [
     "# Visualize results (noise is shown in black) using a simple plot\n",
-    "plot(seeds.sub$width, seeds.sub$length,col = clusters_assignments1$cluster, pch = 16, main = "Scatterplot Displaying Clusters", xlab = "Kernel Width", ylab = "Kernel Length")\n",
-    "legend(x = 2.6, y = 6.75, legend = levels(clusters_assignments1$cluster), col = c(1:5), pch = 16, title = "Clusters")\n"
+    "plot(seeds.sub$width, seeds.sub$length, col = clusters_assignments1$cluster, pch = 16, main = \"Scatterplot Displaying Clusters\", xlab = \"Kernel Width\", ylab = \"Kernel Length\")\n",
+    "legend(x = 2.6, y = 6.75, legend = levels(clusters_assignments1$cluster), col = c(1:5), pch = 16, title = \"Clusters\")\n"
    ]
   },
   {
