--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualizing the 2 results\n"
+    "## Visualizing the results\n"
    ]
   },
   {
