--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -39,7 +39,9 @@
     "install.packages(\"dbscan\", dependencies = TRUE)\n",
     "library('dbscan')\n",
     "# Downloading the file in the Data Scientist Workbench\n",
-    "download.file(\"https://ibm.box.com/shared\",\"/resources/seeds.csv\")\n",
+    "download.file(\"https://raw.githubusercontent.com/domwarr/R-Mining/master/seeds.txt\",\"/resources/seeds.txt\")\n",
+    "# Load data\n",
+    "seeds <- read.csv("seeds.txt", sep = "\t")\n",
     "head(seeds)"
    ]
   },
