--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -41,7 +41,7 @@
     "# Downloading the file in the Data Scientist Workbench\n",
     "download.file(\"https://raw.githubusercontent.com/domwarr/R-Mining/master/seeds.txt\",\"/resources/seeds.txt\")\n",
     "# Load data\n",
-    "seeds <- read.csv("seeds.txt", sep = "\t")\n",
+    "seeds <- read.csv(\"seeds.txt\", sep = \"\t\")\n",
     "head(seeds)"
    ]
   },
