--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -13,7 +13,7 @@
     "1. Installing and loading the DBSCAN library and the data in R\n",
     "2. Creating a subset from the datatset\n",
     "3. Using the dbscan function to obtain clusters\n",
-    "4. Convert the clusters to factors \n",
+    "4. Converting the clusters to factors \n",
     "5. Attaching the clusters to the measurements\n",
     "6. Visualizing the results\n"
    ]
@@ -60,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "# Creating the subset: It contains the kernel width and the kernel length\n",
+    "# Creating the subset: The subset contains the kernel width and the kernel length\n",
     "seeds.sub <- subset(seeds, select = c(width,length))\n",
     "head(seeds.sub)\n"
    ]
@@ -89,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Attaching the clusters to the measurements\n"
+    "## Converting the clusters to factors\n"
    ]
   },
   {
