--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -109,6 +109,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Attaching the clusters to the measurements\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# seeds.sub$cluster_no <- clusters_assignments1$cluster\n",
+    "head(seeds.sub)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Visualizing the results\n"
    ]
   },
