--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "# seeds.sub$cluster_no <- clusters_assignments1$cluster\n",
+    "seeds.sub$cluster_no <- clusters_assignments1$cluster\n",
     "head(seeds.sub)\n"
    ]
   },
