--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -120,6 +120,7 @@
    },
    "outputs": [],
    "source": [
+    "# Combine the cluster assignments with the subset\n",
     "seeds.sub$cluster_no <- clusters_assignments1$cluster\n",
     "head(seeds.sub)\n"
    ]
