--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -151,6 +151,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Thanks for completing this exercise!\n",
+    "\n",
+    "Notebook created by: Dominique Warren"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### References:\n",
     "\n",
     "https://en.wikipedia.org/wiki/DBSCAN <br>\n",
