--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Use the dbscan function to obtain clusters and store them in clusters_assignments1 \n",
-    "# For this exercise we will use eps = 0.8 and minPts = 4, but you can change the values of these parameters to see different clusters\n",
+    "# For this exercise we will use eps = 0.8 and minPts = 4, but you can change the values of these \n parameters to see different clusters\n",
     "clusters_assignments1 <- dbscan(seeds.sub, eps = .08, minPts = 4)\n",
     "clusters_assignments1 \n"
    ]
