--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Thanks for completing this exercise!\n",
+    "### Thank you for completing this exercise!\n",
     "\n",
     "Notebook created by: Dominique Warren"
    ]
