--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -5,10 +5,13 @@
    "metadata": {},
    "source": [
     "# Exercise - Density-based Spatial Clustering of Applications with Noise (DBSCAN) in R\n",
-    "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise.  \n",
+    "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise. \n",
     "\n",
-    "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat. ",
-    "Specifically, this exercise covers:\n",
+    "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat. \n",
+    "The DBSCAN algorithm clusters data points that are closely packed together based on the parameters **eps** and **minPts**. \n",
+    "The **eps** parameter corresponds to the size of the neighborhood. \n",
+    "The **minPts** parameter corresponds to the minimum number of points that must exist in this neighborhood to define it as a dense area. \n",
+    "This exercise covers:\n",
     "\n",
     "1. Installing and loading the DBSCAN library and the data in R\n",
     "2. Creating a subset from the datatset\n",
