--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -40,7 +40,28 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    area perimeter compactness length width asymmetry_coeff\n",
+       "1   15.26     14.84      0.8710  5.763 3.312           2.221\n",
+       "2   14.88     14.57      0.8811  5.554 3.333           1.018\n",
+       "3   14.29     14.09      0.9050  5.291 3.337           2.699\n",
+       "4   13.84     13.94      0.8955  5.324 3.379           2.259\n",
+       "5   16.14     14.99      0.9034  5.658 3.562           1.355\n",
+       "6   14.38     14.21      0.8951  5.386 3.312           2.462\n",
+       "    groove_length type\n",
+       "1         5.220    1\n",
+       "2         4.956    1\n",
+       "3         4.825    1\n",
+       "4         4.805    1\n",
+       "5         5.175    1\n",
+       "6         4.956    1\n"
+       ]
+     },
+    }
+   ],
    "source": [
     "# Installing the library 'dbscan'\n",
     "install.packages(\"dbscan\", dependencies = TRUE)\n",
