--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat. \n",
     "\n",
-    "The DBSCAN algorithm clusters data points that are closely packed together based on the parameters **eps** and **minPts**. \n",
+    "The DBSCAN algorithm combines data points that are closely packed together into clusters based on the parameters **eps** and **minPts**. \n",
     "\n",
     "The **eps** parameter corresponds to the size of the neighborhood. \n",
     "\n",
