--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -88,7 +88,23 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "       width length\n",
+       "1 3.312  5.763\n",
+       "2 3.333  5.554\n",
+       "3 3.337  5.291\n",
+       "4 3.379  5.324\n",
+       "5 3.562  5.658\n",
+       "6 3.312  5.386\n"
+       ]
+     },
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Creating the subset: The subset contains the kernel width and the kernel length\n",
     "seeds.sub <- subset(seeds, select = c(width,length))\n",
