--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -124,7 +124,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DBSCAN clustering for 210 objects.\n",
+       "Parameters: eps = 0.08, minPts = 4\n",
+       "The clustering contains 4 cluster(s) and 40 noise points.\n",
+       "\n",
+       "  0   1   2   3   4\n", 
+       " 40 128   8   4  30\n"
+       ]
+     },
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the dbscan function to obtain clusters and store them in clusters_assignments1 \n",
     "# For this exercise we will use eps = 0.8 and minPts = 4\n",
