--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -181,7 +181,23 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+   {
+     "data": {
+      "text/plain": [
+       "  width length cluster_no\n",
+       "1 3.312  5.763          1\n",
+       "2 3.333  5.554          1\n",
+       "3 3.337  5.291          2\n",
+       "4 3.379  5.324          2\n",
+       "5 3.562  5.658          0\n",
+       "6 3.312  5.386          2\n"
+       ]
+     },
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Combine the cluster assignments with the subset\n",
     "seeds.sub$cluster_no <- clusters_assignments1$cluster\n",
