--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -169,7 +169,8 @@
     {
      "data": {
       "text/plain": [
-       ""
+       "[1] 1 1 2 2 0 2\n",
+       "Levels: 0 1 2 3 4\n"
        ]
      },
      "execution_count": null,
@@ -179,7 +180,8 @@
    ],
    "source": [
     "# Clusters must be converted to factor before plotting in different colors\n",
-    "clusters_assignments1$cluster <- as.factor(clusters_assignments1$cluster)\n"
+    "clusters_assignments1$cluster <- as.factor(clusters_assignments1$cluster)\n",
+    "clusters_assignments1$cluster\n"
    ]
   },
   {
