--- a/R_dbscan_eg.ipynb
+++ b/R_dbscan_eg.ipynb
@@ -181,7 +181,7 @@
    "source": [
     "# Clusters must be converted to factor before plotting in different colors\n",
     "clusters_assignments1$cluster <- as.factor(clusters_assignments1$cluster)\n",
-    "clusters_assignments1$cluster\n"
+    "head(clusters_assignments1$cluster)\n"
    ]
   },
   {
