--- a/R_dbscan_eg_soln.ipynb
+++ b/R_dbscan_eg_soln.ipynb
@@ -8,7 +8,7 @@
     "This notebook is designed to help get you familiar with using the DBSCAN algorithm in R through a simple exercise. \n",
     "\n",
     "## The problem\n",
-    "We would like to analyze kernels of wheat to find a method through which we can group kernels. We will first consider clustering by just the size of the kernel (kernel length and kernel width), and then we will look at creating clusters based on all the numerical variables of the dataset.\n",
+    "We would like to analyze kernels of wheat to find a method through which we can group kernels. We will first consider clustering by just the size of the kernel (kernel length and kernel width), and then we will look at creating clusters based on all the numerical variables in the dataset.\n",
     "In this notebook, we will load and explore 'seeds.txt' in R, which is a dataset containing measurements of geometrical properties of kernels belonging to three different varieties of wheat. \n",
     "\n",
     "The DBSCAN algorithm combines data points that are closely packed together into clusters based on the parameters **eps** and **minPts**. \n",
