--- a/R_dbscan_eg_soln.ipynb
+++ b/R_dbscan_eg_soln.ipynb
@@ -24,7 +24,8 @@
     "3. Using the dbscan function to obtain clusters\n",
     "4. Converting the clusters to factors \n",
     "5. Attaching the clusters to the measurements\n",
-    "6. Visualizing the results\n"
+    "6. Visualizing the results\n",
+    "7. Considering all numerical variables\n"
    ]
   },
   {
@@ -263,6 +264,13 @@
     "plot(seeds.sub$width, seeds.sub$length, col = clusters_assignments1$cluster, pch = 16, main = \"Scatterplot Displaying Clusters\", xlab = \"Kernel Width\", ylab = \"Kernel Length\")\n",
     "\n",
     "legend(x = 2.6, y = 6.75, legend = levels(clusters_assignments1$cluster), col = c(1:5), pch = 16, title = \"Clusters\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Considering all numerical variables\n"
    ]
   },
   {
