--- a/R_dbscan_eg_soln.ipynb
+++ b/R_dbscan_eg_soln.ipynb
@@ -274,6 +274,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LOL 1 2 2 0 2\n",
+       "LOL 0 1 2 3 4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DBSCAN\n",
+    "clusters_assignments2 <- dbscan(seeds, eps = .37, minPts = 4)\n",
+    "# Clusters must be converted to factor before plotting in different colors\n",
+    "clusters_assignments2$cluster <- as.factor(clusters_assignments2$cluster)\n",
+    "# Linking the assigned cluster to each station\n",
+    "seeds$cluster_no <- clusters_assignments$cluster\n",
+    "# Visualize results (noise is shown in black)\n",
+    "pairs(seeds, col = clusters_assignments2$cluster, pch = 16, main = \"Scatterplot Displaying Clusters\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
