--- a/R_dbscan_eg_soln.ipynb
+++ b/R_dbscan_eg_soln.ipynb
@@ -25,7 +25,8 @@
     "4. Converting the clusters to factors \n",
     "5. Attaching the clusters to the measurements\n",
     "6. Visualizing the results\n",
-    "7. Considering all numerical variables\n"
+    "7. Considering all numerical variables\n",
+    "8. Conclusion\n"
    ]
   },
   {
